# Rust-wasm

./: .gitignore  .prettierrc.toml  Cargo.toml  LICENSE_MIT  README.md  index.html
src/: closure.rs  dom.rs  input.rs  lib.rs  macro.rs  task_inner.rs  tasks.rs
style/: global.css  global.css.map  global.scss  main.css  main.css.map  main.scss
