[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Softgod <softgod4@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
console_error_panic_hook = []

[dependencies]
once_cell = "1.19.0"
regex = "1.10.6"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  "HtmlInputElement",
  "HtmlButtonElement",
]
